--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy static content to Pages
+name: Debug Deploy to GitHub Pages
 
 on:
   push:
@@ -19,10 +19,15 @@ jobs:
         node-version: '16'
 
     - name: Install dependencies
-      run: npm install
+      run: |
+        npm install
+        npm --version
+        node --version
 
     - name: Build the project
-      run: npm run build
+      run: |
+        npm run build
+        ls -la build
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
