--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,61 +1,32 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+    branches:
+      - main
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: "npm"
+
       - name: Install dependencies
         run: npm install
-      - name: Build
-        run: npm run build && cp ./dist/index.html ./dist/404.html
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
+
+      - name: Build project
+        run: npm run build
+
       - name: Upload artifact
-        uses: actions/upload-artifact@v2 # Updated version here
+        uses: actions/upload-artifact@v3
         with:
-          # Upload dist repository
-          path: "./dist"
+          name: build
+          path: build/
+
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          artifact: dist
-          target: gh-pages
-          clean: true
-          publish_dir: ./dist
-          token: ${{ secrets.GITHUB_TOKEN }}
-          force_orphan: true
-          commit_message: "Deployed to GitHub Pages"
-          commit_user_name: "GitHub Actions"
-          commit_user_email: "hstconnor@gmail.com"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
