--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,6 +39,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build && cp ./dist/index.html ./dist/404.html
+      - name: Verify build output
+        run: ls -la ./dist
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
