--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -44,10 +44,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
-          # Upload dist repository
-          path: "./dist"
+          name: build
+          path: ./dist
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
