--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -48,8 +48,10 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build
+          name: github-pages
           path: ./dist
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact: github-pages
