--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -54,4 +54,4 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
         with:
-          artifact: github-pages
+          artifact_name: github-pages
