--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,6 +41,8 @@ jobs:
         run: npm run build --verbose && cp ./dist/index.html ./dist/404.html
       - name: Verify build output
         run: ls -la ./dist
+      - name: List all files in dist
+        run: find ./dist -type f -exec ls -la {} \;
       - name: Check for symlinks and hard links
         run: |
           echo "Checking for symlinks and hard links in the build output..."
