--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,26 +2,20 @@
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -29,10 +23,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4 # ✅ Correct version
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v4 # ✅ Correct version
         with:
           node-version: 18
           cache: "npm"
@@ -44,20 +38,13 @@ jobs:
         run: npm run build && cp ./dist/index.html ./dist/404.html
 
       - name: Setup GitHub Pages
-        uses: actions/configure-pages@v4
+        uses: actions/configure-pages@v3 # ✅ Latest available version
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4 # Updated to v2
+        uses: actions/upload-pages-artifact@v2 # ✅ Latest available version
         with:
           path: "./dist"
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
-        with:
-          artifact-path: dist
-          keep_files: false
-          target_branch: gh-pages
-          commit_message: "Deploy ${{ github.sha }}"
-          publish_dir: dist
-          token: ${{ secrets.GITHUB_TOKEN }} # This token is provided by GitHub Actions
+        uses: actions/deploy-pages@v1 # ✅ Latest available version
